crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_all_status_glyphs.snap
---
source: crates/qoo-tui/src/view/mod.rs
expression: terminal.backend()
---
" 1:acme (1)                                                                              ● running 0"
"╭📋 QUEUE──── [r] [x] [g] [a] [d]╮╭📄 DETAIL───────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (36, " ")]
"│                                ││ 1:report  2:transcript  3:prompt  4:info                       │"
"│ 🔍 [/]filter                   ││                                                                │" Hidden by multi-width symbols: [(3, " ")]
"│    Prompt/Args    Live         ││  (no report yet)                                               │"
"│ ‼  ipt task                  ▲ ││                                                                │"
"│ ○  que task       #1 in lane █ ││                                                                │"
"│ ──────── finished ────────── █ ││                                                                │"
"│ ⊗  vrf task                  █ ││                                                                │"
"│ ⊝  skp task                  █ ││                                                                │"
"│ ✗  fai task                  █ ││                                                                │"
"│ ●  don task                  ▼ ││                                                                │"
"╰────────────────────────────────╯│                                                                │"
"╭⚡TASKS─────── [r] [d] [c] · [z]╮│                                                                │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter                   ││                                                                │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions            ││                                                                │"
"│                                ││                                                                │"
"╰────────────────────────────────╯│                                                                │"
"╭🌲 WORKTREES──── [r] [g] [x] [t]╮│                                                                │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter                   ││                                                                │" Hidden by multi-width symbols: [(3, " ")]
"│ no worktrees                   ││                                                                │"
"│                                ││                                                                │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                                      "
