crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_collapsed_queue_tasks.snap
---
source: crates/qoo-tui/src/view/mod.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─────── [z]expand╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"╰─────────────────────────╯│ 1:report  2:transcript  3:prompt  4:info          │"
"╭⚡TASKS · 0 tasks──── [z]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"╰─────────────────────────╯│  (no report yet)                                  │"
"╭🌲 WORKTREES─ [g] [x] [t]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│                         ││                                                   │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│   Name                  ││                                                   │"
"│ 2 feature               ││                                                   │"
"│ ● hotfix                ││                                                   │"
"│ ● feature               ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
