crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_default_80x24.snap
---
source: crates/qoo-tui/src/view/mod.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt/Args ││  (no report yet)                                  │"
"│ ⠯  feature  topic=widg… ││                                                   │"
"│ ○  feature  topic=docs… ││                                                   │"
"│ ──────── finished ───── ││                                                   │"
"│ ✗  main                 ││                                                   │"
"│ ●  main                 ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯│                                                   │"
"╭⚡TASKS [r] [d] [c] · [z]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯│                                                   │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature               ││                                                   │"
"│ ● hotfix                ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
