crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_help_overlay.snap
---
source: crates/qoo-tui/src/view/mod.rs
expression: terminal.backend()
---
" 1:acme ╭ keymap ──────────────────────────────────────────────────────╮  ↯ grok"
"╭📋 QUEU│                                                              │───────╮" Hidden by multi-width symbols: [(2, " ")]
"│       │   Tab / Shift+Tab cycle focus: queue → tasks → worktrees     │       │"
"│ 🔍 [/]│   1–9 / 0         switch project tab (0 = 10th)              │       │" Hidden by multi-width symbols: [(3, " ")]
"│     Wo│   ctrl+s then n/p next / previous project tab                │       │"
"│ ⠯   fe│   arrows          move list cursor (shift: extend selection  │       │"
"│ ○   fe│   space           mark/unmark row (non-contiguous, combines  │       │"
"│ ──────│   j / k           detail: move lane-task row · else scroll   │       │"
"│ ✗   ma│   h / l           detail: previous / next sub-tab            │       │"
"│ ●   ma│   ctrl+x / ctrl+z detail sub-tab (alias of l / h)            │       │"
"│       │   enter           open selected lane task (worktrees)        │       │"
"│       │   r               rerun (queue) · run def (tasks) — schedul  │       │"
"╰───────│   g               goto: tmux split juice|agent 3:1 — resume  │       │"
"╭⚡TASKS│   x               cancel (queue) · remove worktree (worktre  │       │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]│   a               archive / unarchive selection (queue)      │       │" Hidden by multi-width symbols: [(3, " ")]
"│ no tas│   d               defer by N hours (digit field, default 5;  │       │"
"│       │   f               favorite: pin / unpin row (queue, worktre  │       │"
"╰───────│   c               cron: pause / resume schedule (tasks)      │       │"
"╭🌲 WORK│   s               schedule adhoc task (queue)                │       │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]│   t               task menu (worktrees)                      │       │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feat│                                                              │       │"
"│ ● hotf│  [ Back ]                                                    │       │"
"╰───────│                                                              │───────╯"
"[1-9/0 ·╰──────────────────────────────────────────────────────────────╯        "
