crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_settings_overlay.snap
---
source: crates/qoo-tui/src/view/mod.rs
assertion_line: 588
expression: terminal.backend()
---
" 1:acme                                                            ● running 1/3"
"╭📋 QUEUE───── [r] [x] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/] filter           ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt      ││  (no report yet)                                  │"
"│ ⠯  feature  implement … ││                                                   │"
"│ ○ ╭ settings — model aliases ────────────────────────────────────────────╮   │"
"│ ──│                                                                      │   │"
"│ ✗ │   models (global)  ~/.config/qoo/config.yaml                         │   │"
"│ ● │     haiku   claude-haiku-4-5                                         │   │"
"│   │     opus    claude-opus-4-8                                          │   │"
"│   │     sonnet  claude-sonnet-4-6                                        │   │"
"╰───│   acme (overrides)  acme/vars.yaml                                   │   │"
"╭⚡T│     opus    claude-opus-4-9                                          │   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍│                                                                      │   │" Hidden by multi-width symbols: [(3, " ")]
"│ no│  [ Back ]                                                            │   │"
"│   │                                                                      │   │"
"╰───╰──────────────────────────────────────────────────────────────────────╯   │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/] filter           ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature  ⏱ 0s         ││                                                   │"
"│ ● hotfix                ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p] tab · [ctrl+x/z] sub-tab · [?] help · [q]uit               "
