crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_too_small.snap
---
source: crates/qoo-tui/src/view/mod.rs
assertion_line: 194
expression: terminal.backend()
---
"terminal too small (60x15 minimum)      "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
