crates/qoo-tui/src/view/snapshots/qoo_tui__view__tests__view_wide_140x30.snap
---
source: crates/qoo-tui/src/view/mod.rs
expression: terminal.backend()
---
" 1:acme (2)                                                                                                  ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE · 1 queued · 1 running─── [r]erun [x]stop [g]oto [a]rchive [d]efer · [s]chedule [z]collapse╮╭📄 DETAIL───────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (104, " ")]
"│                                                                                                    ││ 1:report  2:transcript  3:prompt  4│"
"│ 🔍 [/]filter                                                                                       ││                                    │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Task          Model     Prompt/Args                  Created      Age       Live       ││  (no report yet)                   │"
"│ ⠯  feature  squash-merge  grok-4.5  topic=widget-cache           07/09 07:00  just now  ⏱ 0s       ││                                    │"
"│ ○  feature                grok-4.5  topic=docs-cache             07/09 07:04  just now  #1 in lane ││                                    │"
"│ ──────── finished ──────────────────────────────────────────────────────────────────────────────── ││                                    │"
"│ ✗  main                   grok-4.5                               07/09 06:50  just now             ││                                    │"
"│ ●  main                   grok-4.5                               07/09 05:00  just now             ││                                    │"
"│                                                                                                    ││                                    │"
"│                                                                                                    ││                                    │"
"│                                                                                                    ││                                    │"
"│                                                                                                    ││                                    │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────╯│                                    │"
"╭⚡TASKS · 4 tasks───────────────────────────────────────────── [r]un [d]iscover [c]ron · [z]collapse╮│                                    │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter                                                                                       ││                                    │" Hidden by multi-width symbols: [(3, " ")]
"│   Name          Model     Description                                            Cron              ││                                    │"
"│ ⌕ pr-review     grok-4.5  Review an open PR end to end.                          Everyday 1:30pm ▲ ││                                    │"
"│   nightly-tidy  grok-4.5  Nightly repo tidy sweep.                               Everyday 2am    █ ││                                    │"
"│ ⌕ deploy        grok-4.5                                                                         ▼ ││                                    │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────╯│                                    │"
"╭🌲 WORKTREES · 1 busy · 2 total──────────────────────── [r]un [g]oto [x]remove [t]asks · [z]collapse╮│                                    │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter                                                                                       ││                                    │" Hidden by multi-width symbols: [(3, " ")]
"│         Name     Last Task                          Author          Commit    Live                 ││                                    │"
"│ 2 ± ⛨ ↣ feature                                     bob             3d ago    ⏱ 0s → write docs f… ││                                    │"
"│ ●       hotfix                                      ada             6h ago                         ││                                    │"
"│ ●       feature                                                                                    ││                                    │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                                                                              "
